[package]
name = "rustfest-webrtc"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version="0.3.0-alpha.19", features = ["async-await"] }
tokio = { version="0.2.0-alpha.6" }
structopt = "0.3"