[package]
name = "rustfest-webrtc"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
tokio = { version = "0.2.0-alpha.6" }
structopt = { version = "0.3", default-features = false }
anyhow = "1"
url = "2"
rand = "0.7"
tungstenite = { git = "https://github.com/snapview/tungstenite-rs" }
tokio-tungstenite = { git = "https://github.com/dbcfd/tokio-tungstenite", rev = "tokio2" }